--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
     <header class="position-fixed fixed-top bg-white" style="border-bottom: 2px solid whitesmoke;">
-        <div class="container">
+        <div class="container header">
             <div class="w3-display-topleft w3-container">
                 <img src="./images/logo.svg" alt="">
             </div>
             <nav class="nav  flex-column flex-sm-row">
-                <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">Home</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">Catalog</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">About Store</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">Contact Us</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">Home</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bolder" href="#">Catalog</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fst-normal" href="#">About Store</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-medium" href="#">Contact Us</a>
                 <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">Search</a>
                 <img src="./images/user.svg" alt="">
-                <span class="ml-1 mt-1">
+                <span class="ml-1 mt-1 position-relative">
                     Join
                 </span>
               </nav>
