--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <header class="position-fixed fixed-top bg-white" style="border-bottom: 2px solid whitesmoke;">
         <div class="container header">
             <div class="w3-display-topleft w3-container">
-                <img src="./images/logo.svg" alt="">
-            </div>
+                <img src="./images/logo.svg"  alt="">
+            </div id="content-wrap">
             <nav class="nav  flex-column flex-sm-row">
                 <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">Home</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bolder" href="#">Catalog</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black fst-normal" href="#">About Store</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black fw-medium" href="#">Contact Us</a>
-                <a class="flex-sm-fill text-sm-center nav-link color_black" href="#">Search</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">Catalog</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">About Store</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">Contact Us</a>
+                <a class="flex-sm-fill text-sm-center nav-link color_black fw-bold" href="#">Search</a>
                 <img src="./images/user.svg" alt="">
-                <span class="ml-1 mt-1 position-relative">
+                <span class="ml-1 mt-1 position-relative fw-medium">
                     Join
                 </span>
               </nav>
                 
             </nav>
-        </div>
+        </div >
     </header>
 
 
-     <footer>
+     <footer id="footer">
         <div class="row m-0">
             <div class="col-md-12">
                 <div class="row justify-content-center ">
