--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <div class="jumbotron bg-transparent text-center text-main">
                             <h1 class="h3 mb-4 font-weight-bolder">Follow us on social media</h1>
                             <div class="row justify-content-center">
-                                <div class="col-md-3">
+                                <div class="col-md-3 social">
                                     <img src="./images/facebook.svg" alt="facebook">
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 social">
                                     <img src="./images/twitter.svg" alt="twitter">
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 social">
                                     <img src="./images/instagram.svg" alt="instagram">
                                 </div>
                             </div>
